# Terminal-Traffic-Light-Simulator

./: .gitignore  Cargo.toml  README.md
assets/: car_sprites.txt  city_layouts.txt
src/: main.rs
src/config/: mod.rs  settings.rs
src/rendering/: ascii_art.rs  mod.rs  terminal.rs  ui.rs
src/simulation/: events.rs  mod.rs  statistics.rs  weather.rs
src/systems/: car.rs  mod.rs  traffic_light.rs
src/traffic/: intersection.rs  lights.rs  mod.rs  vehicles.rs
