[package]
name = "terminal-traffic-light-simulator"
version = "0.1.0"
edition = "2021"
authors = ["Justin D."]
description = "A fast, secure terminal-based traffic light simulator built in Rust"
license = "MIT"
repository = "https://github.com/Myrmecology/Terminal-Traffic-Light-Simulator"

[dependencies]
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
colored = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1